added layout for programs and standing committees

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+<hr class="featurette-divider">
 <footer class="container">
   <div class="row">
     <div class="col-6 col-md-2 mb-3">
@@ -14,21 +15,21 @@
     <div class="col-6 col-md-2 mb-3">
       <h3>Programs</h3>
       <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Sehlumile</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Imunzi</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Rare Diseases Initiative</a></li>
+        <li class="nav-item mb-2"><a href="/sehlumile" class="nav-link p-0 text-body-secondary">Sehlumile</a></li>
+        <li class="nav-item mb-2"><a href="/imunzi" class="nav-link p-0 text-body-secondary">Imunzi</a></li>
+        <li class="nav-item mb-2"><a href="/rare-diseases" class="nav-link p-0 text-body-secondary">Rare Diseases Initiative</a></li>
       </ul>
     </div>
 
     <div class="col-6 col-md-2 mb-3">
       <h3>Standing Committees</h3>
       <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="score" class="nav-link p-0 text-body-secondary">Research Exchange (SCORE)</a></li>
-        <li class="nav-item mb-2"><a href="scope" class="nav-link p-0 text-body-secondary">Professional Exchanges (SCOPE)</a></li>
-        <li class="nav-item mb-2"><a href="scome" class="nav-link p-0 text-body-secondary">Medical Education (SCOME)</a></li>
-        <li class="nav-item mb-2"><a href="scorp" class="nav-link p-0 text-body-secondary">Human Rights & Peace (SCORP)</a></li>
-        <li class="nav-item mb-2"><a href="scoph" class="nav-link p-0 text-body-secondary">Public Health (SCOPH)</a></li>
-        <li class="nav-item mb-2"><a href="scora" class="nav-link p-0 text-body-secondary">Sexual & Reproductive Health and Rights (SCORA)</a></li>
+        <li class="nav-item mb-2"><a href="/score" class="nav-link p-0 text-body-secondary">Research Exchange (SCORE)</a></li>
+        <li class="nav-item mb-2"><a href="/scope" class="nav-link p-0 text-body-secondary">Professional Exchanges (SCOPE)</a></li>
+        <li class="nav-item mb-2"><a href="/scome" class="nav-link p-0 text-body-secondary">Medical Education (SCOME)</a></li>
+        <li class="nav-item mb-2"><a href="/scorp" class="nav-link p-0 text-body-secondary">Human Rights & Peace (SCORP)</a></li>
+        <li class="nav-item mb-2"><a href="/scoph" class="nav-link p-0 text-body-secondary">Public Health (SCOPH)</a></li>
+        <li class="nav-item mb-2"><a href="/scora" class="nav-link p-0 text-body-secondary">Sexual & Reproductive Health and Rights (SCORA)</a></li>
       </ul>
     </div>
 
