--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
 <header data-bs-theme="auto" class="mb-5">
 <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
       <img src="/assets/img/zimsa-logo.png" alt="..." width="160" height="68">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,15 +22,15 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">
-                <img src="assets/img/logos/imunzi.png" alt="" class="img-fluid link-img"/>
+              <a class="dropdown-item" href="/imunzi">
+                <img src="/assets/img/logos/imunzi.png" alt="" class="img-fluid link-img"/>
               Imunzi
               </a>
             </li>
-            <li><a class="dropdown-item" href="#">
-              <img src="assets/img/logos/sehlumile.png" alt="" class="img-fluid link-img"/>Sehlumile</a></li>
-            <li><a class="dropdown-item" href="#">
-              <img src="assets/img/logos/rare-diseases-initiative.png" alt="" class="img-fluid link-img"/>Rare Diseases Initiative</a></li>
+            <li><a class="dropdown-item" href="/sehlumile">
+              <img src="/assets/img/logos/sehlumile.png" alt="" class="img-fluid link-img"/>Sehlumile</a></li>
+            <li><a class="dropdown-item" href="/rare-diseases">
+              <img src="/assets/img/logos/rare-diseases-initiative.png" alt="" class="img-fluid link-img"/>Rare Diseases Initiative</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -41,18 +41,18 @@
             Standing Committees
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">
-              <img src="assets/img/logos/score.png" alt="" class="img-fluid link-img"/>Research Exchanges (SCORE)</a></li>
-            <li><a class="dropdown-item" href="#">
-              <img src="assets/img/logos/scope.png" alt="" class="img-fluid link-img"/>Professional Exchanges (SCOPE)</a></li>
-            <li><a class="dropdown-item" href="#">
-              <img src="assets/img/logos/scome.png" alt="" class="img-fluid link-img"/>Medical Education (SCOME)</a></li>
-            <li><a class="dropdown-item" href="#">
-              <img src="assets/img/logos/scorp.png" alt="" class="img-fluid link-img"/>Human Rights & Peace (SCORP)</a></li>
-            <li><a class="dropdown-item" href="#">
-              <img src="assets/img/logos/scoph.png" alt="" class="img-fluid link-img"/>Public Health (SCOPH)</a></li>
-            <li><a class="dropdown-item" href="#">
-              <img src="assets/img/logos/scora.png" alt="" class="img-fluid link-img"/>Sexual & Reproductive Health and Rights (SCORA)</a></li>
+            <li><a class="dropdown-item" href="/score">
+              <img src="/assets/img/logos/score.png" alt="" class="img-fluid link-img"/>Research Exchanges (SCORE)</a></li>
+            <li><a class="dropdown-item" href="/scope">
+              <img src="/assets/img/logos/scope.png" alt="" class="img-fluid link-img"/>Professional Exchanges (SCOPE)</a></li>
+            <li><a class="dropdown-item" href="/scome">
+              <img src="/assets/img/logos/scome.png" alt="" class="img-fluid link-img"/>Medical Education (SCOME)</a></li>
+            <li><a class="dropdown-item" href="/scorp">
+              <img src="/assets/img/logos/scorp.png" alt="" class="img-fluid link-img"/>Human Rights & Peace (SCORP)</a></li>
+            <li><a class="dropdown-item" href="/scoph">
+              <img src="/assets/img/logos/scoph.png" alt="" class="img-fluid link-img"/>Public Health (SCOPH)</a></li>
+            <li><a class="dropdown-item" href="/scora">
+              <img src="/assets/img/logos/scora.png" alt="" class="img-fluid link-img"/>Sexual & Reproductive Health and Rights (SCORA)</a></li>
           </ul>
         </li>
         <li class="nav-item">
