--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -96,7 +96,7 @@ layout: default
     <hr class="featurette-divider">
 
     <div class="row featurette">
-      <div class="col-md-7 order-md-2">
+      <div class="col-md-7 order-md-2">w
         <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
         <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
       </div>
@@ -134,28 +134,28 @@ layout: default
       <div class="col">
         <div class="row row-cols-1 row-cols-sm-2 g-4">
           <div class="col d-flex flex-column gap-2">
-            <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+            <div class="feature-icon-small d-inline-flex align-items-center justify-content-center border shadow p-3 bg-gradient fs-4 rounded-3">
               <img src="assets/img/universities/uz.png" alt="..." class="img-fluid university-img"/>
             </div>
             <h4 class="fw-semibold mb-0 text-body-emphasis">University of Zimbabwe</h4>
           </div>
 
           <div class="col d-flex flex-column gap-2">
-            <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+            <div class="feature-icon-small d-inline-flex align-items-center justify-content-center border shadow p-3 bg-gradient fs-4 rounded-3">
               <img src="assets/img/universities/msu.png" alt="..." class="img-fluid university-img"/>
             </div>
             <h4 class="fw-semibold mb-0 text-body-emphasis">Midlands State University</h4>
           </div>
 
           <div class="col d-flex flex-column gap-2">
-            <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+            <div class="feature-icon-small d-inline-flex align-items-center justify-content-center border shadow p-3 bg-gradient fs-4 rounded-3">
               <img src="assets/img/universities/gzu.png" alt="..." class="img-fluid university-img"/>
             </div>
             <h4 class="fw-semibold mb-0 text-body-emphasis">Great Zimbabwe University</h4>
           </div>
 
           <div class="col d-flex flex-column gap-2">
-            <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+            <div class="feature-icon-small d-inline-flex align-items-center justify-content-center border shadow p-3 bg-gradient fs-4 rounded-3">
               <img src="assets/img/universities/nust.png" alt="..." class="img-fluid university-img"/>
             </div>
             <h4 class="fw-semibold mb-0 text-body-emphasis">National University of Science & Technology</h4>
