--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,4 +1,4 @@
-// $backgroundColor: #f2f6ff;
+$backgroundColor: #fbfdff;
 // $bodyColor: #000000;
 // $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
@@ -10,6 +10,7 @@
 
 
 body {
+  background-color: $backgroundColor;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
 }
