--- a/_layouts/program-layout.html
+++ b/_layouts/program-layout.html
@@ -19,7 +19,23 @@ layout: default
         </div>
     </div>
     <hr class="divider" />
-    <div class="mt-2 align-items-center">
-        {{ content }}
+
+    <div class="row py-lg-5">
+        <div class="col-lg-6 col-md-8 mx-auto">
+            {{ content }}
+            <div class="row mt-5">
+                <div class="col-md-4">
+                  <img src="{{ page.director-picture }}" alt="Profile Picture" class="img-thumbnail rounded-circle mx-auto d-block">
+                </div>
+                <div class="col-md-8">
+                  <h2>Director: {{ page.director-name }}</h2>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><i class="bi bi-telephone"></i> <a href="tel:{{ page.director-phone }}">{{ page.director-phone }}</a></li>
+                    <li class="list-group-item"><i class="bi bi-whatsapp"></i> <a href="https://wa.me/{{ page.director-phone }}">{{ page.director-phone }}</a></li>
+                    <li class="list-group-item"><i class="bi bi-envelope"></i> <a href="mailto:{{ page.director-email }}">{{ page.director-email }}</a></li>
+                  </ul>
+                </div>
+              </div>
+        </div>
     </div>
 </div>
