added data folder for executive committee

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,13 +33,13 @@
       </ul>
     </div>
 
-    <div class="col-md-5 offset-md-1 mb-3">
+    <!-- <div class="col-md-5 offset-md-1 mb-3">
       <div>
         <h3>Details</h3>
         <p>ZIMSA is an officially registered organisation located at Michael Gelfand House in Harare.</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3798.4161736974133!2d31.041348675297243!3d-17.81911518314351!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1931a50346b46459%3A0xd5d22ffd602dd660!2sThe%20Michael%20Gelfand%20Clinic!5e0!3m2!1sen!2szw!4v1708530204706!5m2!1sen!2szw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </form>
-    </div>
+    </div> -->
   </div>
 
   <div class="d-flex flex-column flex-sm-row justify-content-between border-top py-1">
