Update links and layout, added SEO and tags

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,7 +24,7 @@
               </a>
             </li>
             <li><a class="dropdown-item" href="/executive-committee">Executive Committee</a></li>
-            <li><a class="dropdown-item" href="/constitution.md">Our Constitution</a></li>
+            <li><a class="dropdown-item" href="/constitution">Our Constitution</a></li>
           </ul>
         </li>
 
