--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.122.0">
-    <title>Zimsa</title>
+    <title>{{ site.title }} | {{ page.title }}</title>
     <script src="https://kit.fontawesome.com/f4b902f1d9.js" crossorigin="anonymous"></script>
     
     <!-- Custom styles for this template -->
@@ -14,4 +14,43 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <!-- SEO -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H8WZT65ZZZ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-H8WZT65ZZZ');
+    </script>
+
+    <!--Meta tags-->
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="{{ page.title }} - {{ site.title }}" />
+    <meta name="description" content="{{ page.description }}" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+    <meta property="og:title" content="{{ page.title }} - {{ site.title }}" />
+    <meta property="og:description" content="{{ page.description }}" />
+    <meta property="og:image" content="{{ page.image }}" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="{{ site.url }}" />
+    <meta property="twitter:title" content="{{ page.title }} - {{ site.title }}" />
+    <meta property="twitter:description" content="{{ page.description }}" />
+    <meta property="twitter:image" content="{{ page.image }}" />
+
+    <!--Browser Toolbar Colour-->
+    <meta name="theme-color" content="#f8f9fa">
+
+    <!--Favicon stuff-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
