Update theme and navigation

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
  
-<header data-bs-theme="auto" class="mb-5">
+<header data-bs-theme="light" class="mb-5">
 <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
@@ -23,7 +23,7 @@
               About
               </a>
             </li>
-            <li><a class="dropdown-item" href="/executive-committee">Executive Committee</a></li>
+            <li><a class="dropdown-item" href="/nec">Executive Committee</a></li>
             <li><a class="dropdown-item" href="/constitution">Our Constitution</a></li>
           </ul>
         </li>
