push redesign changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,55 +1,67 @@
-<hr class="featurette-divider">
-<footer class="container">
-  <div class="row">
-    <div class="col-6 col-md-2 mb-3">
-      <h3>Who We Are</h3>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Our Structure</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">University Of Zimbabwe</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">National University of Science & Technology</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Midlands State University</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Great Zimbabwe University</a></li>
-      </ul>
-    </div>
+<footer id="footer" class="footer light-background">
 
-    <div class="col-6 col-md-2 mb-3">
-      <h3>Programs</h3>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="/sehlumile" class="nav-link p-0 text-body-secondary">Sehlumile</a></li>
-        <li class="nav-item mb-2"><a href="/imunzi" class="nav-link p-0 text-body-secondary">Imunzi</a></li>
-        <li class="nav-item mb-2"><a href="/rare-diseases" class="nav-link p-0 text-body-secondary">Rare Diseases Initiative</a></li>
-      </ul>
-    </div>
+  <div class="container footer-top">
+    <div class="row gy-4">
+      <div class="col-lg-4 col-md-6 footer-about">
+        <a href="index.html" class="logo d-flex align-items-center">
+          <span class="sitename">{{ site.title }}</span>
+        </a>
+        <div class="footer-contact pt-3">
+          <p>{{ site.address }}</p>
+          <p class="mt-3"><strong>Phone:</strong> <span>{{ site.phone }}</span></p>
+          <p><strong>Email:</strong> <span>{{ site.email }}</span></p>
+        </div>
+        <div class="social-links d-flex mt-4">
+          <a href="{{ site.social.twitter }}"><i class="bi bi-twitter-x"></i></a>
+          <a href="{{ site.social.facebook }}"><i class="bi bi-facebook"></i></a>
+          <a href="{{ site.social.instagram }}"><i class="bi bi-instagram"></i></a>
+          <a href="{{ site.social.linkedin }}"><i class="bi bi-linkedin"></i></a>
+        </div>
+      </div>
 
-    <div class="col-6 col-md-2 mb-3">
-      <h3>Standing Committees</h3>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="/score" class="nav-link p-0 text-body-secondary">Research Exchange (SCORE)</a></li>
-        <li class="nav-item mb-2"><a href="/scope" class="nav-link p-0 text-body-secondary">Professional Exchanges (SCOPE)</a></li>
-        <li class="nav-item mb-2"><a href="/scome" class="nav-link p-0 text-body-secondary">Medical Education (SCOME)</a></li>
-        <li class="nav-item mb-2"><a href="/scorp" class="nav-link p-0 text-body-secondary">Human Rights & Peace (SCORP)</a></li>
-        <li class="nav-item mb-2"><a href="/scoph" class="nav-link p-0 text-body-secondary">Public Health (SCOPH)</a></li>
-        <li class="nav-item mb-2"><a href="/scora" class="nav-link p-0 text-body-secondary">Sexual & Reproductive Health and Rights (SCORA)</a></li>
-      </ul>
-    </div>
+      <div class="col-lg-3 col-md-4 footer-links">
+        <h4>Useful Links</h4>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="/about">About us</a></li>
+          <li><a href="#">Terms of service</a></li>
+          <li><a href="#">Privacy policy</a></li>
+        </ul>
+      </div>
 
-    <!-- <div class="col-md-5 offset-md-1 mb-3">
-      <div>
-        <h3>Details</h3>
-        <p>ZIMSA is an officially registered organisation located at Michael Gelfand House in Harare.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3798.4161736974133!2d31.041348675297243!3d-17.81911518314351!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1931a50346b46459%3A0xd5d22ffd602dd660!2sThe%20Michael%20Gelfand%20Clinic!5e0!3m2!1sen!2szw!4v1708530204706!5m2!1sen!2szw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </form>
-    </div> -->
+      <div class="col-lg-3 col-md-4 footer-links">
+        <h4>Standing Committees</h4>
+        <ul>
+          <li><a href="/score">Research Exchange (SCORE)</a></li>
+          <li><a href="/scope">Professional Exchanges (SCOPE)</a></li>
+          <li><a href="/scome">Medical Education (SCOME)</a></li>
+          <li><a href="/scorp">Human Rights & Peace (SCORP)</a></li>
+          <li><a href="/scoph">Public Health (SCOPH)</a></li>
+          <li><a href="/scora">Sexual & Reproductive Health and Rights (SCORA)</a></li>
+        </ul>
+      </div>
+
+      <div class="col-lg-2 col-md-4 footer-links">
+        <h4>Programs</h4>
+        <ul>
+          <li><a href="/sehlumile">Sehlumile</a></li>
+          <li><a href="/imunzi">Imunzi</a></li>
+          <li><a href="/rare-diseases">Rare Diseases Initiative</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
 
-  <div class="d-flex flex-column flex-sm-row justify-content-between border-top py-1">
-    <p>© 2024 Zimsa. All rights reserved | Website made by <a href="https://tanakamawere.co.zw">Tanaka Mawere</a></p>
-    <ul class="list-unstyled d-flex">
-      <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-      <li class="ms-3"><a href="https://www.instagram.com/zimsa_zimbabwe//">
-        <i class="fa-brands fa-instagram fa-xl icon-colour icon-size"></i>
-    </a></li>
-      <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-    </ul>
+  <div class="container copyright text-center mt-4">
+    <p>© 2025<span> Copyright</span> <strong class="px-1 sitename">{{ site.title }}</strong> <span>All Rights Reserved</span></p>
+    <div class="credits">
+      <!-- All the links in the footer should remain intact. -->
+      <!-- You can delete the links only if you've purchased the pro version. -->
+      <!-- Licensing information: https://bootstrapmade.com/license/ -->
+      <a href="https://tanakamawere.co.zw">Tanaka Mawere</a> <br/>
+      <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    </div>
   </div>
+
 </footer>
