--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,33 @@
   <head>
     {%- include head.html -%}
   </head>
-  <body>
+  <body class="index-page">
     {% include navbar.html %}
 
-    <main>
+    <main class="main">
       {{ content }}
     </main>
 
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
-    </body>
+    
     {% include footer.html %}
+
+    
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Preloader -->
+  <div id="preloader"></div>
+
+    
+
+  <!-- Vendor JS Files -->
+    <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/vendor/php-email-form/validate.js"></script>
+    <script src="/assets/vendor/aos/aos.js"></script>
+    <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/main.js"></script>
+    </body>
 </html>
