--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,60 +2,162 @@
 layout: default
 ---
 
-<div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="assets/img/carousel_image2.jpg" alt=".." class="d-block w-100" />
-        <div class="container">
-          <div class="carousel-caption text-start">
-            <h1>Welcome To ZIMSA</h1>
-            <p class="opacity-75">The over-arching organisation for medical students training in ZImbabwe</p>
-            <p><a class="btn btn-lg btn-primary" href="about">Learn More</a></p>
+<!-- Hero Section -->
+<section id="hero" class="hero section light-background">
+
+  <img src="/assets/img/carousel_image2.jpg" alt="" data-aos="fade-in">
+
+  <div class="container position-relative">
+
+    <div class="welcome position-relative" data-aos="fade-down" data-aos-delay="100">
+      <h2 class="text-light">WELCOME TO ZIMSA</h2>
+      <p class="text-light">Empowering the next generation of healthcare leaders in Zimbabwe through education, community service, and advocacy.</p>
+    </div><!-- End Welcome -->
+
+    <div class="content row gy-4">
+      <div class="col-lg-4 d-flex align-items-stretch">
+        <div class="why-box" data-aos="zoom-out" data-aos-delay="200">
+          <h3>Why Join ZIMSA?</h3>
+          <p>
+            ZIMSA is a platform for medical students to grow professionally and make a difference in their communities. Through training, community health projects, and international collaborations, we equip students with the skills and knowledge to address critical health challenges in Zimbabwe and beyond.
+          </p>
+          <div class="text-center">
+            <a href="#about" class="more-btn"><span>Learn More</span> <i class="bi bi-chevron-right"></i></a>
+          </div>
+        </div>
+      </div><!-- End Why Box -->
+
+      <div class="col-lg-8 d-flex align-items-stretch">
+        <div class="d-flex flex-column justify-content-center">
+          <div class="row gy-4">
+
+            <div class="col-xl-4 d-flex align-items-stretch">
+              <div class="icon-box" data-aos="zoom-out" data-aos-delay="300">
+                <i class="bi bi-clipboard-data"></i>
+                <h4>Community Health Projects</h4>
+                <p>ZIMSA leads initiatives like the IMUNZI Project, focusing on HIV/AIDS awareness and mental health support for youth in Zimbabwe.</p>
+              </div>
+            </div><!-- End Icon Box -->
+
+            <div class="col-xl-4 d-flex align-items-stretch">
+              <div class="icon-box" data-aos="zoom-out" data-aos-delay="400">
+                <i class="bi bi-gem"></i>
+                <h4>Training & Workshops</h4>
+                <p>We organize annual training sessions to equip students with skills in health education, leadership, and peer-to-peer facilitation.</p>
+              </div>
+            </div><!-- End Icon Box -->
+
+            <div class="col-xl-4 d-flex align-items-stretch">
+              <div class="icon-box" data-aos="zoom-out" data-aos-delay="500">
+                <i class="bi bi-inboxes"></i>
+                <h4>Global Collaboration</h4>
+                <p>ZIMSA partners with international organizations like IFMSA to promote global health initiatives and share best practices.</p>
+              </div>
+            </div><!-- End Icon Box -->
+
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="assets/img/carousel_image1.jpg" alt=".." class="img-fluid"  />
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Are you new?</h1>
-            <p>Have you recently started medical school? If so, we have just the thing for you</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Zimsa Starter Pack</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/img/carousel_image3.jpg" alt=".." class="img-fluid"   />
-        <div class="container">
-          <div class="carousel-caption text-end">
-            <h1>Work in the Community</h1>
-            <p>Pictures of the places we have the been and the projects we undertake. Dive in.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+    </div><!-- End Content-->
+
   </div>
 
+</section><!-- /Hero Section -->
 
-  <!-- Marketing messaging and featurettes
-  ================================================== -->
-  <!-- Wrap the rest of the page in another container to center all the content. -->
 
-  
+<!-- About Section -->
+<section id="about" class="about section">
+
+  <div class="container">
+
+    <div class="row gy-4 gx-5">
+
+      <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="200">
+        <img src="/assets/img/carousel_image3.jpg" class="img-fluid" alt="">
+        <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
+      </div>
+
+      <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
+        <h3>About Us</h3>
+        <p>
+          The Zimbabwe Medical Students Association (ZIMSA) is a dynamic organization dedicated to empowering medical students across Zimbabwe. Through education, community service, and advocacy, we aim to address critical health challenges and shape the future of healthcare in our nation.
+        </p>
+        <ul>
+          <li>
+            <i class="fa-solid fa-vial-circle-check"></i>
+            <div>
+              <h5>Community Health Initiatives</h5>
+              <p>We lead impactful projects like the IMUNZI Project, focusing on HIV/AIDS awareness and mental health support for youth.</p>
+            </div>
+          </li>
+          <li>
+            <i class="fa-solid fa-pump-medical"></i>
+            <div>
+              <h5>Training & Capacity Building</h5>
+              <p>ZIMSA organizes workshops and training sessions to equip students with skills in health education, leadership, and peer facilitation.</p>
+            </div>
+          </li>
+          <li>
+            <i class="fa-solid fa-heart-circle-xmark"></i>
+            <div>
+              <h5>Global Collaboration</h5>
+              <p>We partner with international organizations like IFMSA to promote global health initiatives and share best practices.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+
+  </div>
+
+</section><!-- /About Section -->
+
+  <!-- Stats Section -->
+<section id="stats" class="stats section light-background">
+
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+    <div class="row gy-4">
+
+      <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
+        <i class="fa-solid fa-user-doctor"></i>
+        <div class="stats-item">
+          <span data-purecounter-start="0" data-purecounter-end="1200" data-purecounter-duration="1" class="purecounter"></span>
+          <p>Members</p>
+        </div>
+      </div><!-- End Stats Item -->
+
+      <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
+        <i class="fa-regular fa-hospital"></i>
+        <div class="stats-item">
+          <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+          <p>Medical Schools Represented</p>
+        </div>
+      </div><!-- End Stats Item -->
+
+      <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
+        <i class="fas fa-flask"></i>
+        <div class="stats-item">
+          <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
+          <p>Research Projects</p>
+        </div>
+      </div><!-- End Stats Item -->
+
+      <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
+        <i class="fas fa-award"></i>
+        <div class="stats-item">
+          <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>
+          <p>Awards and Recognitions</p>
+        </div>
+      </div><!-- End Stats Item -->
+
+    </div>
+
+  </div>
+
+</section><!-- /Stats Section -->
+
 
     <!--Blog Section-->
     <section class="container mt-5">
