removed unnecessary css

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,4 +1,4 @@
-$backgroundColor: #fbfdff;
+//$backgroundColor: #fbfdff;
 // $bodyColor: #000000;
 // $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
@@ -8,10 +8,4 @@ $backgroundColor: #fbfdff;
 // $border-color-01: lighten($brand-color, 40%) !default;
 // $spacing-unit:     30px !default;
 
-
-body {
-  background-color: $backgroundColor;
-  font-family: "Montserrat", sans-serif;
-  font-weight: bold;
-}
 
