push website without running

--- a/_sass/styles.css
+++ b/_sass/styles.css
@@ -1057,6 +1057,9 @@
     left: calc(50% - 47px);
     top: calc(50% - 47px);
   }
+  .link-img{
+    max-width: 50px;
+}
   
   /*--------------------------------------------------------------
   # Stats Section
