--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,14 +3,13 @@
   <div class="topbar d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
+        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:{{ site.email }}">{{ site.email }}</a></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>{{ site.phone }}</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="{{ site.social.facebook }}" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="{{ site.social.instagram }}" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="{{ site.social.linkedin }}" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
     </div>
   </div><!-- End Top Bar -->
@@ -19,8 +18,7 @@
 
     <div class="container position-relative d-flex align-items-center justify-content-between">
       <a href="/" class="logo d-flex align-items-center me-auto">
-        <img src="/assets/img/zimsa-logo.png" alt="" width="100" height="68">
-        <!-- <h1 class="sitename">Zimsa</h1> -->
+        <img src="/assets/img/zimsa-logo.png" alt="" width="110" height="75">
       </a>
 
       <nav id="navmenu" class="navmenu">
