--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,13 +33,14 @@
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="assets/css/main.css" rel="stylesheet">
+     
+    <link rel="stylesheet" href="{{ "/assets/vendor/bootstrap/css/bootstrap.min.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/vendor/bootstrap-icons/bootstrap-icons.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/vendor/aos/aos.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/vendor/fontawesome-free/css/all.min.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/vendor/glightbox/css/glightbox.min.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/vendor/swiper/swiper-bundle.min.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 
     <!--Favicon stuff-->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
