--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,13 +34,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- Vendor CSS Files -->
      
-    <link rel="stylesheet" href="{{ /assets/vendor/bootstrap/css/bootstrap.min.css | relative_url }}">
-    <link rel="stylesheet" href="{{ /assets/vendor/bootstrap-icons/bootstrap-icons.css | relative_url }}">
-    <link rel="stylesheet" href="{{ /assets/vendor/aos/aos.css | relative_url }}">
-    <link rel="stylesheet" href="{{ /assets/vendor/fontawesome-free/css/all.min.css | relative_url }}">
-    <link rel="stylesheet" href="{{ /assets/vendor/glightbox/css/glightbox.min.css | relative_url }}">
-    <link rel="stylesheet" href="{{ /assets/vendor/swiper/swiper-bundle.min.css | relative_url }}">
-    <link rel="stylesheet" href="{{ /assets/css/main.css | relative_url }}">
+    <link rel="stylesheet" href="/assets/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/vendor/bootstrap-icons/bootstrap-icons.css">
+    <link rel="stylesheet" href="/assets/vendor/aos/aos.css">
+    <link rel="stylesheet" href="/assets/vendor/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="/assets/vendor/glightbox/css/glightbox.min.css">
+    <link rel="stylesheet" href="/assets/vendor/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
+
 
     <!--Favicon stuff-->
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
