--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,12 @@
 
   <!-- Preloader -->
   <div id="preloader"></div>
-    <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/vendor/php-email-form/validate.js"></script>
-    <script src="/assets/vendor/aos/aos.js"></script>
-    <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="/assets/ven/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/ven/php-email-form/validate.js"></script>
+    <script src="/assets/ven/aos/aos.js"></script>
+    <script src="/assets/ven/glightbox/js/glightbox.min.js"></script>
+    <script src="/assets/ven/purecounter/purecounter_vanilla.js"></script>
+    <script src="/assets/ven/swiper/swiper-bundle.min.js"></script>
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/main.js"></script>
     </body>
