edited index stats

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -123,7 +123,7 @@ layout: default
       <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
         <i class="fa-solid fa-user-doctor"></i>
         <div class="stats-item">
-          <span data-purecounter-start="0" data-purecounter-end="1200" data-purecounter-duration="1" class="purecounter"></span>
+          <span data-purecounter-start="0" data-purecounter-end="350" data-purecounter-duration="1" class="purecounter"></span>
           <p>Members</p>
         </div>
       </div><!-- End Stats Item -->
@@ -131,7 +131,7 @@ layout: default
       <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
         <i class="fa-regular fa-hospital"></i>
         <div class="stats-item">
-          <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+          <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
           <p>Medical Schools Represented</p>
         </div>
       </div><!-- End Stats Item -->
@@ -139,7 +139,7 @@ layout: default
       <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
         <i class="fas fa-flask"></i>
         <div class="stats-item">
-          <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
+          <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
           <p>Research Projects</p>
         </div>
       </div><!-- End Stats Item -->
@@ -147,8 +147,8 @@ layout: default
       <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
         <i class="fas fa-award"></i>
         <div class="stats-item">
-          <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>
-          <p>Awards and Recognitions</p>
+          <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+          <p>Programs</p>
         </div>
       </div><!-- End Stats Item -->
 
