--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -65,7 +65,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="cta-btn d-none d-sm-block" href="#appointment">Join Us!</a>
+      <a class="cta-btn d-none d-sm-block" href="https://wa.me?263778868328">Join Us!</a>
 
     </div>
 
